--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <title>Jan-Ken-Pon</title>
 </head>
 <body>
-    
+    <div class="header">A game of jan-ken-pon is used to decide whether your team plays first or not.
+        It's in your hands to decide the fate of humanity (and your team).
+    </div>
+    <div class="choices">
+        <div class="choice" id="jan"><img src="images/rock.jpg" alt="the rock"></div>
+        <div class="choice" id="ken"><img src="images/paper.jpg" alt="the ken"></div>
+        <div class="choice" id="pon"><img src="images/scissor.jpg" alt="the pon"></div>
+    </div>
+    <footer>images from https://www.pexels.com/</footer>
 </body>
 </html>
 <script src="script.js"></script>
