--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <div class="choice" id="ken"><img src="images/paper.jpg" alt="the ken"></div>
         <div class="choice" id="pon"><img src="images/scissor.jpg" alt="the pon"></div>
     </div>
-    <footer>images from https://www.pexels.com/</footer>
+    <div class="containerActualChoice">
+        <div class="actualChoice" id="user"><img></div>
+        <div class="actualChoice" id="com"><img></div>
+    </div>
+        <footer>images from https://www.pexels.com/</footer>
 </body>
 </html>
 <script src="script.js"></script>
