--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
         It's in your hands to decide the fate of humanity (and your team).
     </div>
     <div class="choices">
-        <div class="choice" id="jan"><img src="images/rock.jpg" alt="the rock"></div>
-        <div class="choice" id="ken"><img src="images/paper.jpg" alt="the ken"></div>
-        <div class="choice" id="pon"><img src="images/scissor.jpg" alt="the pon"></div>
+        <div class="choice" ><img class="imgChoice" id="jan" src="images/rock.jpg" alt="the rock"></div>
+        <div class="choice" ><img class="imgChoice" id="ken" src="images/paper.jpg" alt="the ken"></div>
+        <div class="choice" ><img class="imgChoice" id="pon" src="images/scissor.jpg" alt="the pon"></div>
     </div>
     <div class="containerActualChoice">
-        <div class="actualChoice" id="user"><img></div>
-        <div class="actualChoice" id="com"><img></div>
+        <div class="actualChoice"><img id="user"></div>
+        <div class="actualChoice"><img id="com"></div>
     </div>
+    <div class="ganaste">Ganaste</div>
+    <div class="perdiste">Perdiste</div>
         <footer>images from https://www.pexels.com/</footer>
 </body>
 </html>
