First official release

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
         <div class="choice" ><img class="imgChoice" id="pon" src="images/scissor.jpg" alt="the pon"></div>
     </div>
     <div class="containerActualChoice">
+        <div class="label">You</div>
         <div class="actualChoice"><img id="user"></div>
         <div class="actualChoice"><img id="com"></div>
+        <div class="label">Com</div>
     </div>
-    <div class="ganaste">Ganaste</div>
-    <div class="perdiste">Perdiste</div>
+    <div class="result" id="win">You Win!</div>
+    <div class="result" id="lose">You Lose!</div>
         <footer>images from https://www.pexels.com/</footer>
 </body>
 </html>
